--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@almothafar/angular-signature-pad": "^5.0.1",
     "@angular/animations": "^15.1.0",
     "@angular/cdk": "^15.1.0",
     "@angular/common": "^15.1.0",
@@ -22,19 +23,20 @@
     "chart.js": "^3.3.2",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
-    "jspdf": "^2.5.1",
+    "ngx-extended-pdf-viewer": "^15.2.2",
+    "pdf-lib": "^1.17.1",
     "primeflex": "^3.2.1",
     "primeicons": "6.0.1",
     "primeng": "15.1.1",
-    "quill": "^1.3.7",
+    "quill": "^2.0.2",
     "rxjs": "~7.5.0",
-    "sweetalert2": "^11.10.7",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.1.0",
+    "@angular-devkit/build-angular": "^15.2.11",
     "@angular-eslint/builder": "^15.1.0",
     "@angular-eslint/eslint-plugin": "^15.1.0",
     "@angular-eslint/eslint-plugin-template": "^15.1.0",
